//Jose I. Retamal
//GMIT 2020

/*This file provide  services for password hashing
and verification. */

syntax = "proto3";

package wcity;

import "wrappers.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ps";

// Define Service interface
// Provide methods for hash and validate a password
service PasswordService {

    // Hash password
    //
    // Will hash the string password from request, response contain a
    // a 32 bytes hashed password and a 32 bytes salt
    rpc Hash (HashRequest) returns (HashResponse);

    // Validate a hashed password
    //
    // Will validate a password, will validate a password in string format
    // against the hash of that password.
    rpc Validate (ValidateRequest) returns (google.protobuf.BoolValue);
}

// The request for hash the password
//
// Will create the hash and salt of the password
message HashRequest {
    int32 userId = 1;
    string password = 2;
}

// Response for hash
//
// return the hashed password with the salt
message HashResponse {
    int32 userId = 1;
    bytes hashedPassword = 2;
    bytes salt = 3;
}

// Validate a password
//
// Takes a string and the password and salt and validate them
message ValidateRequest {
    string password = 1;
    bytes hasshedPassword = 2;
    bytes salt = 3;
}
